# district-system

./: .gitignore  404.html  CONTRIBUTING.md  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
districtsystem/: CUP.py  OP_building_loads.py  TES.py  basemodel.py  building_mixing.py  building_module.py  building_staticInputs.py  config.py  heatPump.py  inputs.py
docs/: index.md  modules.md
modules/: index.html
notebooks/: Book4.xlsx  Building_PNNL_c_profiles.xlsx  Building_PNNL_elec_profiles.xlsx  Building_PNNL_s_profiles.xlsx  CO2 heat pump details.xlsx  Calculation_map_output-1.xlsx  New CUP_Key ouputs_No values (No decarb).xlsx  Ocean temp.xlsx  Ocean temp_WS.xlsx  UCSB Calculation Map.xlsx  UCSB_CUP Heat pump TES.ipynb  UCSB_Excel to Python.ipynb  UCSB_Loads_and_usage.ipynb  Weather data.xlsx  new_CUP_Therm_Loads.pkl
notebooks/Building loads data/: README.md
notebooks/inputs/: Building usage data.xlsx  Building_COP_Process load.xlsx  Building_MetaData.xlsx  Calculation_map_output.xlsx  Date and Time.xlsx  Inputs.xlsx  UCSB merged baselines_COP_process load.xlsx  new_CUP_Therm_Loads.pkl
notebooks/pnnl_models/: Building_PNNL_gas_profiles.xlsx
search/: search_index.json
tests/: test_foo.py
