[tool.poetry]
name = "districtsystem"
version = "0.0.1"
description = "A district energy simulator"
authors = ["Samuel Letellier-Duchesne <fsamuelduchesne@me.com>"]
repository = "https://github.com/Elementa-Engineering/district-system"
documentation = "https://Elementa-Engineering.github.io/districtsystem/"
readme = "README.md"
packages = [
  {include = "districtsystem"}
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

pandas = "^2.2.2"
pydantic = "^2.7.1"
openpyxl = "^3.1.2"
statsmodels = "^0.14.2"
scikit-learn = "^1.4.2"
pandas-stubs = "^2.2.2.240514"
[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["districtsystem"]
disallow_untyped_defs = "True"
disallow_untyped_decorators = "False"
disallow_any_generics = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_redundant_casts = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
no_implicit_reexport = "True"
plugins = [
  "pydantic.mypy"
]
follow_imports = "silent"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["statsmodels.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["districtsystem"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
